# desktop-basic-income-app-rust-slint-ui

./: Cargo.toml  README.md
src/: main.rs
ui/: appwindow.slint
